Fix: Do not stretch image on home screen.

--- a/app/assets/stylesheets/content/_widget_box.sass
+++ b/app/assets/stylesheets/content/_widget_box.sass
@@ -140,8 +140,8 @@ $widget-box--enumeration-width: 20px
 
 
     .widget-box--teaser-image
-      width: 30%
-      height: 100px
+      max-width: 30%
+      max-height: 100px
       margin-left: auto
       margin-right: auto
 
